## This is still under development. 
## For now it's more a scratch area.
## Things will come together soon

## GpgMe library
#To check if we have gpg enables use the following macro (which will setup the GPGME_* variables too
#Macro: AM_PATH_GPGME ([minimum-version], [action-if-found], [action-if-not-found])
#Use macro AC_SYS_LARGEFILE to enable large-file-support for the application
AM_CPPFLAGS = $(GPGME_CFLAGS)
LDADD = $(GPGME_LIBS)
